# POSIX

./: .CMakelists.txt.swp  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
src/consumer/: con.c  consumer.c
src/cp/: cp.c
src/list/: README.md  list.c
src/ls/: README.md  ls.c  ls.c.save
src/philosopher/: config.h  main.c
src/philosopher/init/: util.c  util.h
src/philosopher/input/: input.c  input.h
src/philosopher/philosopher/: philosopher.c  philosopher.h
src/pthread/: README.md  pthread  pthread.c
src/sharemormery/: coumser.c  prod.c
src/thread/: thread.c
src/zjrconsumer/: consumer  consumer.c
