cmake_minimum_required(VERSION 3.13)
project(POSIX C)
set(CMAKE_C_STANDARD 99)
add_executable(mycp ../src/cp/cp.c)
add_executable(list ../src/list/list.c)
add_executable(myls ../src/ls/ls.c)
add_executable(thread ../src/thread/thread.c)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")