cmake_minimum_required(VERSION 3.13)
project(POSIX C)
set(CMAKE_C_STANDARD 99)
add_executable(mycp ../src/cp/cp.c)
add_executable(list ../src/list/list.c)
add_executable(myls ../src/ls/ls.c)
add_executable(thread ../src/thread/thread.c)
add_executable(philosopher ../src/philosopher/main.c ../src/philosopher/philosopher/philosopher.c ../src/philosopher/init/util.c ../src/philosopher/philosopher/philosopher.h ../src/philosopher/init/util.h ../src/philosopher/config.h ../src/philosopher/input/input.c ../src/philosopher/input/input.h)
find_package(Threads REQUIRED)
target_link_libraries(philosopher Threads::Threads)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")